automatically backed up by learn

--- a/views/date.erb
+++ b/views/date.erb
@@ -1,2 +1,3 @@
 <h1>Today</h1>
-<p><%="The date is #{Date.today.strftime("%A, %B, %d, %Y")}" %></p>
+<% date = Date.today.strftime("%A, %B, %d, %Y") %>
+<p><%="The date is #{date}" %></p>
