--- a/views/date.erb
+++ b/views/date.erb
@@ -1,4 +1,8 @@
 
+ <% d = Date.today %>
+ <p> <%= Date.today.strftime("The date is %A, %B %d, %Y") %></p>
+
+
 <h1>Today</h1>
 <% date = Date.today.strftime("The date is %A, %B, %d, %Y") %>
 <!-- <p><%="The date is #{date}"%></p> -->
